implementing empty report endpoint
